update tier list to use new schema

--- a/src/app/league-zone/league-tier-list/league-tier-list-form/pokemon-edit-dialog/pokemon-edit-dialog.component.html
+++ b/src/app/league-zone/league-tier-list/league-tier-list-form/pokemon-edit-dialog/pokemon-edit-dialog.component.html
@@ -60,7 +60,7 @@
           <mat-label>Other Ban Notes</mat-label>
           <input
             matInput
-            formControlName="banNotes"
+            formControlName="notes"
             placeholder="Enter ban/restriction notes..."
           />
         </mat-form-field>
