--- a/src/app/league-zone/league-tier-list/league-tier-list.component.scss
+++ b/src/app/league-zone/league-tier-list/league-tier-list.component.scss
@@ -284,6 +284,10 @@
     gap: var(--pdz-space-2xs);
     color: pdz-color(on-surface-variant);
     flex-shrink: 0;
+    position: absolute;
+    right: var(--pdz-space-2xs);
+    top: var(--pdz-space-2xs);
+
     @include apply-typography(body-xs);
   }
 
