--- a/src/app/pages/top-navbar/top-navbar.component.html
+++ b/src/app/pages/top-navbar/top-navbar.component.html
@@ -83,7 +83,7 @@
         matBadge="1"
         matBadgeSize="small"
         matBadgeOverlap="false"
-        [matBadgeHidden]="false"
+        [matBadgeHidden]="true"
         >apparel</mat-icon
       >
     </a>
