--- a/src/app/league-zone/league-tier-list/league-tier-list.component.html
+++ b/src/app/league-zone/league-tier-list/league-tier-list.component.html
@@ -222,7 +222,7 @@
                   class="type-label"
                   [style.background-color]="typeColor(type)"
                 >
-                  <div class="type-label__text">
+                  <div class="type-text">
                     {{ type }}
                   </div>
                 </div>
