--- a/src/app/tools/replay_analyzer/replay.component.html
+++ b/src/app/tools/replay_analyzer/replay.component.html
@@ -1,43 +1,28 @@
 <h1 class="w-full text-2xl p-3 text-center font-nasa">Replay Analyzer</h1>
 <div class="flex flex-col items-center w-full space-y-3">
-  <div
-    class="p-2 border-2 flex items-center w-128 max-w-full bg-menu-100 rounded-xl border-menu-400"
-  >
+  <div class="p-2 border-2 flex items-center w-128 max-w-full bg-menu-100 rounded-xl border-menu-400">
     <div class="font-semibold">Replay</div>
-    <input
-      [(ngModel)]="replayURI"
-      type="text"
-      class="p-1 bg-menu-100 border-2 flex-grow border-menu-300 rounded-lg mx-2"
-    />
+    <input [(ngModel)]="replayURI" type="text"
+      class="p-1 bg-menu-100 border-2 flex-grow border-menu-300 rounded-lg mx-2" />
     @if (!analyzed) {
-      <button
-        (click)="analyze()"
-        class="px-2 py-1 border-2 shadow bg-menu-200 rounded-xl border-menu-400"
-      >
-        Analyze
-      </button>
+    <button (click)="analyze()" class="px-2 py-1 border-2 shadow bg-menu-200 rounded-xl border-menu-400">
+      Analyze
+    </button>
     }
     @if (analyzed) {
-      <button
-        class="opacity-50 px-2 py-1 border-2 shadow bg-menu-200 rounded-xl border-menu-400"
-      >
-        Analyze
-      </button>
+    <button class="opacity-50 px-2 py-1 border-2 shadow bg-menu-200 rounded-xl border-menu-400">
+      Analyze
+    </button>
     }
   </div>
   <div>
     The replay analyzer is currently still in testing. If you find errors,
     please share the replay on our
-    <a
-      href="https://discord.gg/sQUEBW4UVx"
-      target="_blank"
-      class="text-blue-500"
-      >Discord</a
-    >.
+    <a href="https://discord.gg/sQUEBW4UVx" target="_blank" class="text-blue-500">Discord</a>.
   </div>
   <!-- <loading *ngIf="analyzed && !replayData"></loading> -->
   <mat-card *ngIf="replayData" class="w-[90%] p-2">
-    <mat-card-title class="flex space-x-4 p-2 text-lg columns-4">
+    <mat-card-title class="flex flex-wrap gap-4 justify-center items-center p-2 text-lg">
       <div class="flex space-x-1">
         <label class="font-semibold text-symbolColor-sub" for="format">
           Format:
@@ -60,29 +45,21 @@
         <label class="font-semibold text-symbolColor-sub" for="gameTime">
           Game Time:
         </label>
-        <span id="gameTime"
-          >{{ toMinutes(replayData.gameTime) }} minutes
-          {{ remainingSeconds(replayData.gameTime) }} seconds</span
-        >
+        <span id="gameTime">{{ toMinutes(replayData.gameTime) }} minutes
+          {{ remainingSeconds(replayData.gameTime) }} seconds</span>
       </div>
     </mat-card-title>
     <mat-card-content
-      class="flex flex-col items-center p-2 border-2 max-w-full w-full bg-menu-100 rounded-xl border-menu-400"
-    >
+      class="flex flex-col items-center p-2 border-2 max-w-full w-full bg-menu-100 rounded-xl border-menu-400">
       <div class="space-y-8 w-full max-w-full pt-3">
-        <div
-          *ngFor="let player of replayData.stats; let playerNum = index"
-          [ngClass]="playerClass(playerNum + 1)"
-          class="p-4 border border-menu-400 rounded-lg"
-        >
+        <div *ngFor="let player of replayData.stats; let playerNum = index" [ngClass]="playerClass(playerNum + 1)"
+          class="p-4 border border-menu-400 rounded-lg">
           <div class="flex space-x-2 items-end flex-wrap pb-6">
             <div class="text-xl font-bold">{{ player.username }}</div>
           </div>
-          <div class="flex space-x-4">
+          <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
             <!-- Sidebar with player stats -->
-            <div
-              class="flex-shrink-0 w-64 space-y-4 p-4 border-2 rounded-lg border-menu-400"
-            >
+            <div class="flex-shrink-0 w-full md:w-64 space-y-4 p-4 border-2 rounded-lg border-menu-400">
               <div>
                 <span class="font-semibold">Kills:</span>
                 {{ player.total.kills }}
@@ -106,7 +83,7 @@
               <div>
                 <span class="font-semibold"> Total Accuracy: </span>
                 {{ player.luck.moves.actual | percent }} ({{
-                  player.luck.moves.hits
+                player.luck.moves.hits
                 }}/{{ player.luck.moves.total }})
               </div>
               <mat-divider></mat-divider>
@@ -118,7 +95,7 @@
               <div>
                 <span class="font-semibold"> Total Crits: </span>
                 {{ player.luck.crits.actual | percent }} ({{
-                  player.luck.crits.hits
+                player.luck.crits.hits
                 }}/{{ player.luck.crits.total }})
               </div>
               <mat-divider></mat-divider>
@@ -131,7 +108,7 @@
                 <div>
                   <span class="font-semibold"> Total Fully Parad: </span>
                   {{ player.luck.status.actual | percent }} ({{
-                    player.luck.status.full
+                  player.luck.status.full
                   }}/{{ player.luck.status.total }})
                 </div>
                 <mat-divider></mat-divider>
@@ -144,29 +121,21 @@
             </div>
             <!-- Pokemon cards area -->
             <div class="flex-grow flex justify-center">
-              <div class="w-full grid grid-cols-6 gap-2">
+              <div class="w-full flex flex-wrap gap-2 justify-center">
                 <mat-card *ngFor="let mon of player.team" class="p-1 w-fit">
                   <mat-card-header class="justify-center">
                     <mat-card-title class="w-20 pb-5">
-                      <pdz-sprite
-                        title="{{ mon.formes[0].detail }}"
-                        [pokemon]="{ id: mon.formes[0].id, name: '' }"
-                        [disabled]="mon.fainted"
-                      ></pdz-sprite>
+                      <pdz-sprite title="{{ mon.formes[0].detail }}" [pokemon]="{ id: mon.formes[0].id, name: '' }"
+                        [disabled]="mon.fainted"></pdz-sprite>
                     </mat-card-title>
                   </mat-card-header>
+                  <!-- <div class="w-3/4 mx-auto border-b border-black mb-2"></div> -->
                   <mat-card-content class="!flex flex-col gap-1">
-                    <div
-                      *ngIf="!mon.kills[1]"
-                      class="p-2 border rounded-lg border-menu-400 text-center"
-                    >
+                    <div *ngIf="!mon.kills[1]" class="p-2 text-center">
                       <span class="font-semibold"> Kills: </span>
                       {{ mon.kills[0] }}
                     </div>
-                    <div
-                      *ngIf="mon.kills[1]"
-                      class="p-2 border rounded-lg border-menu-400 text-center"
-                    >
+                    <div *ngIf="mon.kills[1]" class="p-2 text-center">
                       <span class="font-semibold"> Kills: </span>
                       <div>
                         <span> Direct: </span>
@@ -177,15 +146,15 @@
                         {{ mon.kills[1] }}
                       </div>
                     </div>
-                    <div class="p-2 border rounded-lg border-menu-400">
-                      <span class="font-semibold"> Damage Dealt: </span>
+                    <div class="p-2 text-center">
+                      <span class="font-semibold"> Damage Dealt:</span>
                       <mat-accordion>
                         <mat-expansion-panel>
                           <mat-expansion-panel-header>
                             <mat-panel-title>
                               {{
-                                mon.damageDealt[0] + (mon.damageDealt[1] || 0)
-                                  | number: "1.0-0"
+                              mon.damageDealt[0] + (mon.damageDealt[1] || 0)
+                              | number: "1.0-0"
                               }}%
                             </mat-panel-title>
                           </mat-expansion-panel-header>
@@ -200,15 +169,15 @@
                         </mat-expansion-panel>
                       </mat-accordion>
                     </div>
-                    <div class="p-2 border rounded-lg border-menu-400">
+                    <div class="p-2 text-center">
                       <span class="font-semibold"> Damage Taken: </span>
                       <mat-accordion>
                         <mat-expansion-panel>
                           <mat-expansion-panel-header>
                             <mat-panel-title>
                               {{
-                                mon.damageTaken[0] + (mon.damageTaken[1] || 0)
-                                  | number: "1.0-0"
+                              mon.damageTaken[0] + (mon.damageTaken[1] || 0)
+                              | number: "1.0-0"
                               }}%
                             </mat-panel-title>
                           </mat-expansion-panel-header>
@@ -223,16 +192,11 @@
                         </mat-expansion-panel>
                       </mat-accordion>
                     </div>
-                    <div
-                      class="p-2 border rounded-lg border-menu-400 text-center"
-                    >
+                    <div class="p-2 text-center">
                       <span class="font-semibold"> HP Restored: </span>
                       {{ mon.hpRestored | number: "1.0-0" }}%
                     </div>
-                    <div
-                      *ngIf="mon.moveset && mon.moveset.length > 0"
-                      class="p-2 border rounded-lg border-menu-400"
-                    >
+                    <div *ngIf="mon.moveset && mon.moveset.length > 0" class="p-2">
                       <!-- <ul class="list-disc pl-4">
                       <li *ngFor="let move of mon.moveset">{{ move }}</li>
                     </ul> -->
@@ -258,29 +222,22 @@
           <h2 class="text-xl font-bold pb-2">Events</h2>
           <div class="flex flex-col gap-1">
             @for (event of replayData.events; track event) {
-              <div
-                class="py-1 px-2 border rounded-lg border-menu-400"
-                [ngClass]="playerClass(event.player)"
-              >
-                <span class="font-semibold"> Turn {{ event.turn }}:</span>
-                {{ event.message }}
-              </div>
+            <div class="py-1 px-2 border rounded-lg border-menu-400" [ngClass]="playerClass(event.player)">
+              <span class="font-semibold"> Turn {{ event.turn }}:</span>
+              {{ event.message }}
+            </div>
             }
           </div>
         </div>
         <div class="w-full flex justify-center">
-          <replay-chart
-            class="w-full bg-slate-200 rounded-lg border-2 border-slate-400 max-w-160"
-            [data]="replayData.stats"
-          ></replay-chart>
+          <replay-chart class="w-full bg-slate-200 rounded-lg border-2 border-slate-400 max-w-160"
+            [data]="replayData.stats"></replay-chart>
         </div>
       </div>
     </mat-card-content>
   </mat-card>
 
   <div *ngIf="replayData" class="flex justify-center w-full p-2">
-    <div
-      class="flex flex-col items-center p-2 border-2 max-w-full w-fit bg-menu-100 rounded-xl border-menu-400"
-    ></div>
+    <div class="flex flex-col items-center p-2 border-2 max-w-full w-fit bg-menu-100 rounded-xl border-menu-400"></div>
   </div>
 </div>
